# extension-eyre

./: Cargo.toml  README.md
examples/: custom_extension.rs  custom_section.rs  with_snafu.rs
src/: config.rs  handler.rs  lib.rs
src/extensions/: map.rs  mod.rs
